--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -1,43 +1,332 @@
 @import "~bulma/sass/utilities/initial-variables"
 
-// Config vars
-$kaldi-red: #FD461E
-$kaldi-red-invert: #fff
+$yelpyRed: #D32323
+$lightBlack: #4D4D4D
+$darkGrey: #999
+$lightGrey: #F5F5F5
+$mainContentWidth: 1030px
+$blueRegular: #0097EC
+$borderColor: #E6E6E6
+$regGrey: #CCC
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+.nav-bar-container
+    height: 110px
+    box-shadow: 0 1px 15px 5px rgba(0,0,0,0.1)
+    font-size: 14px
+    position: fixed
+    top: 0 
+    left: 0
+    right: 0
+    z-index: 10
+    background: white
 
-.content .taglist
-  list-style: none
-  margin-bottom: 0
-  margin-left: 0
-  margin-right: 1.5rem
-  margin-top: 1.5rem
-  display: flex
-  flex-wrap: wrap
-  justify-content: left
-  align-items: center
-  li
-    padding: 0 2rem 1rem 0
-    margin-bottom: 1.5rem
-    margin-top: 0
+    .nav-bar
+        width: 1300px
+        height: 100%
+        position: relative
+        margin: auto
 
-// Helper Classes
-.full-width-image-container
-  width: 100vw
-  height: 400px
-  position: relative
-  left: 50%
-  right: 50%
-  margin: 5em -50vw
-  background-size: cover
-  background-position: bottom
-  display: flex
-  justify-content: center
-  align-items: center
+        .yelp-logo-container
+            position: absolute
+            top: 15px
+            left: 0
+            display: flex
+            align-items: center
 
-.margin-top-0
-  margin-top: 0 !important
+            .yelp-logo
+                width: 50px;
+                height: 40px;
+                display: inline-block
+            .yelp-for-business
+                margin-left: 10px
+                font-weight: bold
+                font-size: 20px
+                display: inline-block
+
+        .nav-menu
+            position: absolute
+            bottom: 0px
+            left: 0px
+
+            .nav-links
+                list-style-type: none
+
+                >li 
+                    display: inline-block
+                    padding: 0 25px 10px
+                    color: $darkGrey
+
+                li.active
+                    border-bottom: 2px solid $yelpyRed
+                    font-weight: bold
+                    color: black
+
+            i 
+                border: solid $darkGrey
+                border-width: 0 3px 3px 0
+                display: inline-block
+                padding: 3px
+                margin: 0 0 2px 2px
+
+            .down
+                transform: rotate(45deg)
+                -webkit-transform: rotate(45deg)
+
+        .page-menu
+            position: absolute
+            top: 10px
+            right: 0px
+
+            .page-links
+                display: inline-block
+                list-style-type: none
+                font-size: 16px
+
+                >li 
+                    display: inline-block
+                    padding: 0 35px 10px
+                    color: $darkGrey
+
+                li.active
+                    border-bottom: 4px solid $yelpyRed
+                    font-weight: bold
+                    color: black
+
+            .btn
+                display: inline-block
+                border-radius: 3px
+                background: #EAEAEA
+                width: 100px
+                height: 40px
+                padding: 0 10px
+                color: $lightBlack
+                text-align: center
+                font-weight: bold
+                font-size: 15px
+                line-height: 40px
+
+            .signUp
+                color: $yelpyRed
+
+            .btnText
+                display: inline-block
+                margin: 8px
+                font-size: 16px
+
+.main-content
+    top: 110px
+    left: 0
+    right: 0
+    position: absolute
+
+    .top-banner-container
+        height: 350px
+        background: $lightGrey  
+        position: relative
+
+        .top-banner
+            display: flex
+            align-items: center
+            width: $mainContentWidth
+            margin: auto
+            height: inherit
+
+            .banner-text
+                width: 45%
+                font-size: 30px
+                line-height: 1.1
+                font-weight: 440
+
+                .banner-text-subscript
+                    font-size: 16px
+                    margin-top: 20px
+                    color: $darkGrey
+                    line-height: 1.4
+                    font-weight: 550
+
+                    .highlightText
+                        color: $blueRegular
+
+            .banner-image
+                width: 55%
+
+.find-business-container 
+    width: $mainContentWidth
+    border-radius: 5px
+    height: 100px
+    border: 1px solid $borderColor
+    margin: auto
+    position: relative
+    top: -50px
+    background: white
+    box-shadow: 0px 35px 74px -34px rgba(0,0,0,0.4)
+    display: flex
+    align-items: center
+    justify-content: center
+
+    .text-box
+        border-radius: 3px
+        border: 1px solid $borderColor
+        width: 35%
+        height: 50%
+        margin: 10px
+
+        .text-content
+            padding: 10px
+            font-weight: bold
+            margin-left: 5px
+
+            .userText
+                font-weight: normal
+                color: $darkGrey
+                margin-left: 10px
+
+    .find-btn
+        background: $yelpyRed
+        border-radius: 3px
+        width: 20%
+        color: white
+        text-align: center
+        font-weight: bold
+        font-size: 16px
+        height: 50%
+        line-height: 50px
+        margin: 10px
+
+.read-more-container 
+    .read-more-text
+        width: $mainContentWidth
+        margin: auto
+        height: 60px
+        margin: auto
+        font-size: 30px
+        text-align: center
+        color: $lightBlack
+
+    .read-more-circle
+        border-radius: 50%
+        background: $blueRegular
+        width: 50px
+        height: 50px
+        margin: auto
+
+        i 
+            border: solid white
+            border-width: 0 3px 3px 0
+            display: inline-block
+            padding: 5px
+            margin: 15px 0 0 18px
+
+        .down-white
+            transform: rotate(45deg)
+            -webkit-transform: rotate(45deg)
+
+.bottom-banner-container
+    width: $mainContentWidth
+    margin: auto
+    margin-top: 20px
+    margin-bottom: 70px
+    text-align: center
+
+    .banner-text
+        font-size: 28px
+        font-weight: 600
+
+    .banner-text-sub
+        font-size: 16px
+        width: 580px
+        margin: auto
+        color: $darkGrey
+        font-weight: 600
+        margin-top: 8px
+        line-height: 1.3em
+
+    .find-btn
+        background: $yelpyRed
+        border-radius: 3px
+        width: 230px
+        color: white
+        text-align: center
+        font-weight: bold
+        font-size: 15px
+        height: 40px
+        line-height: 40px
+        margin: auto
+        margin-top: 20px
+
+.footer-container 
+    height: 280px
+    background: $lightGrey
+
+    .footer-content
+        display: flex
+        justify-content: center
+        width: $mainContentWidth
+        margin: auto
+        height: 210px
+        align-items: flex-start        
+        padding-top: 40px
+        border-bottom: 2px solid $regGrey
+
+        .list-title
+            font-weight: bold
+            color: $lightBlack
+            font-size: 15px
+
+        .footer-about, .footer-discover, .footer-app-content
+            width: 29%
+            color: $darkGrey
+            font-size: 14px
+
+        .desc
+            line-height: 1.1em
+            margin-top: 5px
+            width: 240px
+
+        .footer-apps
+            .iOS, .android
+                display: inline-block
+                width: 120px
+                height: 100%
+                margin: 10px 5px 0 0
+
+        ul
+            list-style-type: none
+
+.legal-info
+    margin: auto
+    width: $mainContentWidth
+    margin-top: 15px
+    color: $lightBlack
+    font-size: 13px
+
+    .copyright
+        float: left
+
+    .locale
+        float: right
+
+        i 
+            border: solid $darkGrey
+            border-width: 0 2px 2px 0
+            display: inline-block
+            padding: 3px
+            margin: 0 0 3px 8px
+
+        .down
+            transform: rotate(45deg)
+            -webkit-transform: rotate(45deg)
+
+
+
+
+
+
+
+
+
+
+
 
 @import "~bulma"
 
