--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -321,7 +321,9 @@ $regGrey: #CCC
 
 
 
-
+.biz-marketing-content
+    width: $mainContentWidth
+    margin: auto
 
 
 
@@ -338,3 +340,4 @@ $regGrey: #CCC
 
     &:not(:last-child)
       border-bottom: 1px solid $grey-lighter
+
