--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -28,17 +28,16 @@ $regGrey: #CCC
 
         .yelp-logo-container
             position: absolute
-            top: 15px
             left: 0
             display: flex
             align-items: center
 
             .yelp-logo
-                width: 50px;
-                height: 40px;
+                width: 120px
+                height: auto
                 display: inline-block
+
             .yelp-for-business
-                margin-left: 10px
                 font-weight: bold
                 font-size: 20px
                 display: inline-block
@@ -147,8 +146,13 @@ $regGrey: #CCC
                     .highlightText
                         color: $blueRegular
 
-            .banner-image
+            .banner-container
                 width: 55%
+
+                .banner-image
+                    width: 330px
+                    height: auto
+                    margin-left: 60px
 
 .find-business-container 
     width: $mainContentWidth
@@ -194,6 +198,7 @@ $regGrey: #CCC
         margin: 10px
 
 .read-more-container 
+
     .read-more-text
         width: $mainContentWidth
         margin: auto
@@ -224,9 +229,17 @@ $regGrey: #CCC
 .bottom-banner-container
     width: $mainContentWidth
     margin: auto
-    margin-top: 20px
+    margin-top: 30px
     margin-bottom: 70px
     text-align: center
+    border-top: 1px solid $borderColor
+    padding-top: 50px
+
+    .banner-logo
+        width: 330px
+        height: auto
+        margin: auto
+        margin-bottom: 30px
 
     .banner-text
         font-size: 28px
@@ -318,17 +331,9 @@ $regGrey: #CCC
             -webkit-transform: rotate(45deg)
 
 
-
-
-
 .biz-marketing-content
     width: $mainContentWidth
     margin: auto
-
-
-
-
-
 
 @import "~bulma"
 
