Update index page

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -346,3 +346,27 @@ $regGrey: #CCC
     &:not(:last-child)
       border-bottom: 1px solid $grey-lighter
 
+
+.content0,.content1,.content2,.content3
+    padding: 10px
+    border-radius: 5px
+    border: 1px solid $lightGrey
+    margin: 10px
+    color: $lightBlack
+    font-weight: 600
+
+.content0
+    background: #EEEEFF
+    border-color: #8C8CFF
+
+.content1
+    background: #EEEEFF
+    border-color: #8C8CFF
+
+.content2
+    background: #EEEEFF
+    border-color: #8C8CFF
+
+.content3
+    background: #EEEEFF
+    border-color: #8C8CFF
